--- a/css/reg.css
+++ b/css/reg.css
@@ -1,136 +1,3 @@
-/*----header----*/
-.header{
-	width:100%;
-	height: 28px;
-	background: #363b3f;
-}
-.header .w{
-	height: 28px;
-	
-}
-.header .w .logo{
-	/*position: absolute;*/
-	position: relative;
-	width: 77px;
-	height: 28px;
-	padding-right: 10px;
-	
-}
-.header .w .logo h1{
-	position: absolute;
-	display: block;
-	width: 72px;
-	height: 23px;
-	margin-top: 5px;
-	background: url(../img/sp1.png) no-repeat -0px -263px;
-}
-.header .w .logo h1:hover{
-	background: url(../img/sp1.png) no-repeat -383px -227px;
-}
-.header .w .header_left{
-	width:85px;
-	height: 28px;
-	position: relative;
-	left:18px;
-	top: 5px;
-}
-.header .header_left a{
-	display: block;
-	width: 85px;
-	height: 28px;
-	
-	/*padding-bottom: 3px;*/
-	color:#74859c;
-}
-.header .header_left a span{
-	display: block;
-	width: 10px;
-	height: 16px;
-	float: left;
-	padding-top: 3px;
-	padding-left: 5px;
-	background: url(../img/sp1.png) no-repeat -376px -348px;
-}
-.header .header_left a:hover{
-	color:#f60;
-}
-.header .header_left a:hover span{
-	background: url(../img/sp1.png) no-repeat -396px -348px;
-}
-.header .header_right1{
-	color:#74859c;
-	margin-right: 19px;
-	margin-top: 5px;
-}
-.header .header_right1 p{
-	display: block;
-	
-	width: 193px;
-	height: 28px;
-}
-.header .header_right1 p span{
-	width: 14px;
-	float: left;
-	height: 16px;
-	padding-right: 3px;
-	background: url(../img/sp1.png) no-repeat -76px -349px;
-}
-.header .header_right1:hover{
-	color: #f60;
-}
-.header .header_right1:hover span{
-	background: url(../img/sp1.png) no-repeat -52px -349px;
-}
-.header .header_right2{
-	margin-top: 5px;
-}
-
-.header .header_right2 a{
-	color:#74859c;
-	display: block;
-	width: 74px;
-	height: 28px;
-	margin-right: 19px;
-}
-.header .header_right2 a span{
-	width: 16px;
-	height: 16px;
-	float: left;
-	margin-top: 3px;
-	padding-right: 2px;
-	background: url(../img/sp1.png) no-repeat -350px -348px;
-}
-.header .header_right2 a:hover{
-	color: #f60;
-}
-.header .header_right2 a:hover span{
-	background: url(../img/sp1.png) no-repeat -324px -348px;
-}
-.header .header_right3{
-	margin-right: 40px;
-	margin-top: 5px;
-}
-.header .header_right3 a{
-	color:#f60;
-}
-.header .header_right3 span{
-	color:#f60;
-}
-/*----nav----*/
-.nav{
-	width: 100%;
-	height: 61px;
-}
-.nav .w{
-	height: 61px;
-}
-.nav .w h3{
-	width: 72px;
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
-	font-weight: 100;
-}
 /*----main-----*/
 .main{
 	width: 100%;
@@ -168,13 +35,34 @@
 	height: 40px;
 	background: #f3f5fa;
 	text-indent: 3em;
-	border: none;
+	border: 1px solid #faf5fa;
 	margin-right: 15px;
 	/*text-align: left;*/
 }
 .main .w .mian1r .main1rc1 input:focus{
-	outline: 2px solid blue;
+	outline: 2px solid #90c1f5;
 }
+.main .w .mian1r .main1rc1 .spanphone{
+	width: 160px;
+	height: 40px;
+	line-height: 40px;
+	color: #aaa;
+	display: none;
+	position: absolute;
+	left: 402px;
+	top: 0px;
+}
+.main .w .mian1r .main1rc1 .spancall{
+	width: 250px;
+	height: 40px;
+	line-height: 40px;
+	color: #f60;
+	/*display: none;*/
+	position: absolute;
+	left: 402px;
+	top: 0px;
+}
+
 .main .w .mian1r .main1rc1 .span1{
 	position: absolute;
 	left: 10px;
@@ -203,7 +91,14 @@
 	/*text-align: left;*/
 }
 .main .w .mian1r .main1rc2 input:focus{
-	outline: 2px solid blue;
+	outline: 2px solid #90c1f5;
+}
+.main .w .mian1r .main1rc2 .spanpassword{
+	width: 330px;
+	height: 40px;
+	line-height: 40px;
+	color: #aaa;
+	display: none;
 }
 .main .w .mian1r .main1rc2 .span2{
 	position: absolute;
@@ -233,7 +128,7 @@
 	/*text-align: left;*/
 }
 .main .w .mian1r .main1rc3 input:focus{
-	outline: 2px solid blue;
+	outline: 2px solid #90c1f5;
 }
 .main .w .mian1r .main1rc3 span{
 	display: block;
@@ -247,8 +142,40 @@
 }
 
 .main .w .mian1r .main1rc4{
+	/*position: relative;*/
 	width: 385px;
 	height: 30px;
+	cursor:default ;
+}
+.main .w .mian1r .main1rc4 .clickspan{
+	/*position: absolute;*/
+	/*display: block;*/
+	/*width: 5px;*/
+	/*height: 5px;*/
+	border-left:5px solid #000;
+	border-top:5px solid #fff ;
+	border-bottom:5px solid #fff ;
+	border-right: 0px;
+	margin-right: 10px;
+	margin-top: 3px;
+	float: left;
+}
+.main .w .mian1r .main1rc4-1{
+	width: 385px;
+	height: 0px;
+	/*display: none;*/
+}
+.main .w .mian1r .main1rc4-1 input{
+	/*display: none;*/
+	width: 380px;
+	height: 0px;
+	text-indent: 1em;
+	border-radius: 3px;
+	background: #f3f5fa;
+	border: none;
+}
+.main .w .mian1r .main1rc4-1 input:focus{
+	outline: 2px solid #90c1f5;
 }
 .main .w .mian1r .main1rc5{
 	display: block;
@@ -276,14 +203,4 @@
 	height: 17px;
 	background: url(../img/sp1.png) no-repeat -25px -321px;
 }
-/*----footer----*/
-.footer{
-	width: 100%;
-	height: 40px;
-	background: #333;
-}
-.footer .w{
-	height: 40px;
-	text-align: center;
-	line-height: 40px;
-}
+
