--- a/css/login.css
+++ b/css/login.css
@@ -2,18 +2,23 @@ body{
 	background: #ebeef3;
 }
 /*----main----*/
-.main.w{
+.main{
+	width: 100%;
+	height:545px;
+	
+}
+.main .main1.w{
 	/*width: 100%;*/
 	height: 424px;
 	background: #fff;
 	margin-top: 20px ;
 	margin-bottom: 20px;
 }
-.main.w .mian1r{
+.main .main1.w .mian1r{
 	width: 1050px;
 	height: 424px;
 }
-.main.w .mian1r .main1rt{
+.main .main1.w .mian1r .main1rt{
 	width: 168px;
 	height: 27px;
 	font-size: 18px;
@@ -21,13 +26,13 @@ body{
 	margin-top: 20px;
 	
 }
-.main.w .mian1r .main1rc1{
+.main .main1.w .mian1r .main1rc1{
 	width: 1050px;
 	height: 70px;
 	background: ;
 	position: relative;
 }
-.main.w .mian1r .main1rc1 input{
+.main .main1.w .mian1r .main1rc1 input{
 	/*display: block;*/
 	width: 380px;
 	height: 40px;
@@ -37,10 +42,10 @@ body{
 	margin-right: 15px;
 	/*text-align: left;*/
 }
-.main.w .mian1r .main1rc1 input:focus{
+.main .main1.w .mian1r .main1rc1 input:focus{
 	outline: 2px solid #90c1f5;
 }
-.main.w .mian1r .main1rc1 .span1{
+.main .main1.w .mian1r .main1rc1 .span1{
 	position: absolute;
 	left: 10px;
 	top: 10px;
@@ -51,13 +56,13 @@ body{
 	background: url(../img/sp1.png) no-repeat -207px -69px;
 }
 
-.main.w .mian1r .main1rc2{
+.main .main1.w .mian1r .main1rc2{
 	width: 1050px;
 	height: 70px;
 	background: ;
 	position: relative;
 }
-.main.w .mian1r .main1rc2 input{
+.main .main1.w .mian1r .main1rc2 input{
 	/*display: block;*/
 	width: 380px;
 	height: 40px;
@@ -67,10 +72,10 @@ body{
 	margin-right: 15px;
 	/*text-align: left;*/
 }
-.main.w .mian1r .main1rc2 input:focus{
+.main .main1.w .mian1r .main1rc2 input:focus{
 	outline: 2px solid #90c1f5;
 }
-.main.w .mian1r .main1rc2 .span2{
+.main .main1.w .mian1r .main1rc2 .span2{
 	position: absolute;
 	left: 10px;
 	top: 10px;
@@ -81,13 +86,13 @@ body{
 	background: url(../img/sp1.png) no-repeat -207px -69px;
 }
 
-.main.w .mian1r .main1rc3{
+.main .main1.w .mian1r .main1rc3{
 	width: 1050px;
 	height: 70px;
 	background: ;
 	position: relative;
 }
-.main.w .mian1r .main1rc3 input{
+.main .main1.w .mian1r .main1rc3 input{
 	/*display: block;*/
 	width: 142px;
 	height: 40px;
@@ -97,10 +102,10 @@ body{
 	margin-right: 15px;
 	/*text-align: left;*/
 }
-.main.w .mian1r .main1rc3 input:focus{
+.main .main1.w .mian1r .main1rc3 input:focus{
 	outline: 2px solid #90c1f5;
 }
-.main.w .mian1r .main1rc3 span{
+.main .main1.w .mian1r .main1rc3 span{
 	display: block;
 	width: 98px;
 	height: 40px;
@@ -110,12 +115,12 @@ body{
 	color: #ababab;
 	border-radius: 3px;
 }
-.main.w .mian1r .main1rc5{
+.main .main1.w .mian1r .main1rc5{
 	display: block;
 	width: 383px;
 	height: 19px;
 }
-.main.w .mian1r .main1rc6{
+.main .main1.w .mian1r .main1rc6{
 	width: 380px;
 	height: 38px;
 	background: #f60;
@@ -123,14 +128,16 @@ body{
 	line-height: 38px;
 	border-radius: 3px;
 	margin-top: 20px;
+	color: #fff;
+	border: none;
 }
-.main.w .mian1r .main1rc7{
+.main .main1.w .mian1r .main1rc7{
 	width:1050px ;
 	height: 21px;
 	margin-top: 15px;
 	position: relative;
 }
-.main.w .mian1r .main1rc7 span{
+.main .main1.w .mian1r .main1rc7 span{
 	position: absolute;
 	display: block;
 	width: 16px;
