--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 .header{
 	width:100%;
 	height: 28px;
-	
+	overflow: hidden;
 	background: #363b3f;
 }
 .header .header_left{
@@ -114,8 +114,16 @@
 	background: url(../img/sp1.png) no-repeat -231px -96px;
 	margin-top: 11px;
 }
+.nav .w .center{
+	width: 205px;
+	height: 66px;
+	line-height: 2em;
+	word-wrap: normal;
+	background: #ddd;
+	text-align: center;
+}
 .nav .w ul{
-	width: 809px;
+	width: 700px;
 	height: 65px;
 	text-align: center;
 }
