--- a/css/index.css
+++ b/css/index.css
@@ -184,11 +184,15 @@
 	display: block;
 	width: 250px;
 	height: 40px;
+	line-height: 40px;
+	text-align: center;
 	background: #f60;
 	margin-top: 10px;
 	position:absolute;
 	left: 30px;
 	top: 130px;
+	color: #fff;
+	font-size: 20px;
 }
 .banner .right .jion p{
 	position: absolute;
@@ -509,6 +513,7 @@ body{
 	margin-left: 40px;
 	margin-top: 30px;
 	border-radius: 3px;
+	color: #fff;
 }
 /*----news----*/
 .news{
